--- a/Presentation/src/main/res/layout/activity_main.xml
+++ b/Presentation/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
 		android:id="@+id/top_bar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:background="@color/white"
 		android:theme="@style/Theme.MoshkovTinkoffTest.AppBarOverlay">
 
 		<TextView
@@ -25,15 +26,17 @@
 		<com.google.android.material.tabs.TabLayout
 			android:id="@+id/tabs"
 			style="@style/StandardText"
+			android:backgroundTint="@color/white"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:background="?attr/colorPrimary" />
 	</com.google.android.material.appbar.AppBarLayout>
 
-	<androidx.viewpager.widget.ViewPager
+	<androidx.viewpager2.widget.ViewPager2
 		android:id="@+id/view_pager"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:layout_margin="@dimen/fab_margin"
 		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
